--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
   </head>
 
   <body style="background-color:#E8F9FD" ;>
-    <img src="ANKITcir.png" alt="profile picture" height="200">
-    <h1><b><i>ANKIT KHANDELWAL</i></b></h1>
-    <b> Phone: 9958877408,7289822818<br>
-      Gmail: ankitkhandelwalk0603@gmail.com</b></p>
+      <table cellspacing="20">
+      <tr>
+        <td>
+          <img src="ANKITcir.png" alt="profile picture" height="200">
+        </td>
+        <td>
+
+          <h1><b><i>ANKIT KHANDELWAL</i></b></h1>
+          <b> Phone: 9958877408,7289822818<br>
+            Gmail: ankitkhandelwalk0603@gmail.com</b></p>
+        </td>
+      </tr>
+    </table>
     <hr>
     <h2><a href="education.html">Academic Qualification</a></h2>
     <p>
