--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
   <html>
 
   <head>
+    <meta charset="utf-8">
     <title>
       Ankit khandelwal
     </title>
   </head>
 
   <body style="background-color:#E8F9FD" ;>
-      <table cellspacing="20">
+    <table cellspacing="20">
       <tr>
         <td>
           <img src="ANKITcir.png" alt="profile picture" height="200">
@@ -17,7 +18,7 @@
 
           <h1><b><i>ANKIT KHANDELWAL</i></b></h1>
           <b> Phone: 9958877408,7289822818<br>
-            Gmail: ankitkhandelwalk0603@gmail.com</b></p>
+            Gmail: ankitkhandelwalk0603@gmail.com</b>
         </td>
       </tr>
     </table>
@@ -77,13 +78,13 @@
         Highly motivated and eager to learn new things.</li>
       <li>Strong motivational and leadership skills.</li>
       <li>
-
         Ability to produce best result in pressure situation.</li>
-
-      Ability to work as individual as well as in group.
+      <li>
+        Ability to work as individual as well as in group.
       </li>
     </ul>
     <hr />
+    <a href="contact.html">CONTACT ME</a>
   </body>
 
   </html>
